# dsa-recommendation

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  ruff.toml
app/: constants.py  main.py
app/api/: deps.py  routes_analyze.py
app/config/: settings.py
app/logging/: logger.py
app/middleware/: error_handler.py  logging_middleware.py
app/models/: domain.py  request_schemas.py  response_schemas.py
app/security/: sanitizer.py
controllers/: recommendation_controller.py
data/vector_pool/: rejected.json  schema_report.txt  vector_pool.parquet  vector_pool_raw.parquet
database/postgres/: connection.py  db.py
database/qdrant/: test_qdrant.py
pipeline/embeddings/: embedder.py  vector_pool.py
pipeline/graphs/: build_graph.py  ingest_rgcn_to_qdrant.py  run_rgcn_pipeline.py  test_rgcn_embeddings.py  train_rgcn.py
pipeline/graphs/rgcn_artifacts/: rgcn_problem_embeddings.npy
pipeline/ingestion/: ingest.py  schema.py
pipeline/recommender/: bkt.py  hlr.py
question-graph/data/: edges.json  nodes.json  questions.json  topics.json
question-graph/src/: graph_builder.py
routes/: api.py
tests/fixtures/: sample_payloads.py
tests/integration/: test_analyze_endpoint.py  test_health.py
tests/unit/: test_logger.py  test_request_schema.py  test_response_schema.py  test_response_validator.py  test_rule_engine.py  test_sanitizer.py  test_settings.py
utils/: code_analyzer.py
